adding custom project history list (saved in preferences) to allow over 40 recent projects, cleanup ValidateIntRange to allow re-use, fix project upgrade launch (do not restore old version number), add settings for enabling +40 recent projects history

--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -122,6 +122,17 @@
             <setting name="webglPort" serializeAs="String">
                 <value>50000</value>
             </setting>
+            <setting name="projectPaths" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" />
+                </value>
+            </setting>
+            <setting name="override40ProjectCount" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="maxProjectCount" serializeAs="String">
+                <value>40</value>
+            </setting>
         </UnityLauncherPro.Properties.Settings>
     </userSettings>
 </configuration>
