test fix for 2 monitors DPI issue #92 (upgrade to dotnet 4.8, add scaling options, save correct windowsize on window_resized)

--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -1,12 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <runtime>
+    <AppContextSwitchOverrides value="Switch.System.Windows.DoNotScaleForDpiChanges=false"/>
+  </runtime>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="UnityLauncherPro.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="UnityLauncherPro.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
     <userSettings>
         <UnityLauncherPro.Properties.Settings>
@@ -41,10 +44,10 @@
                 <value>False</value>
             </setting>
             <setting name="preferredVersion" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="newProjectsRoot" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="askNameForQuickProject" serializeAs="String">
                 <value>True</value>
@@ -59,7 +62,7 @@
                 <value>False</value>
             </setting>
             <setting name="webglBuildPath" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="useCustomTheme" serializeAs="String">
                 <value>False</value>
@@ -92,10 +95,10 @@
                 <value>0</value>
             </setting>
             <setting name="templatePackagesFolder" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="newProjectPlatform" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="searchProjectPathAlso" serializeAs="String">
                 <value>False</value>
@@ -104,7 +107,7 @@
                 <value>False</value>
             </setting>
             <setting name="shortcutBatchFileFolder" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="rootFolders" serializeAs="Xml">
                 <value>
@@ -124,7 +127,7 @@
             </setting>
             <setting name="projectPaths" serializeAs="Xml">
                 <value>
-                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" />
+                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"/>
                 </value>
             </setting>
             <setting name="override40ProjectCount" serializeAs="String">
