updates: add radiobutton to select All, LTS, Alpha, Beta, Add humanfriendly & custom date string release date support,  Skip empty line from unity updates data (#91)

--- a/UnityLauncherPro/UnityLauncherPro.csproj
+++ b/UnityLauncherPro/UnityLauncherPro.csproj
@@ -80,6 +80,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Converters\ReleaseDateConverter.cs" />
     <Compile Include="Converters\LastModifiedConverter.cs" />
     <Compile Include="Data\BuildReport.cs" />
     <Compile Include="Data\BuildReportItem.cs" />
