add initscript for new quick projects started without name dialog, hide console window on process start (it was visible in unity 2023, not visible in older versions(?)), set enableProjectRename and showTargetPlatform settings as true by default)

--- a/UnityLauncherPro/Properties/Settings.settings
+++ b/UnityLauncherPro/Properties/Settings.settings
@@ -45,13 +45,13 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="enableProjectRename" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="streamerMode" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="showTargetPlatform" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="webglBuildPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
