add "win64" as default platform, add releasetype (lts/alpha/beta) to new project dialog, move releasetype checking to Tools, fix preferred version initial value from "none" to null,

--- a/UnityLauncherPro/Properties/Settings.settings
+++ b/UnityLauncherPro/Properties/Settings.settings
@@ -96,7 +96,7 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="newProjectPlatform" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">win64</Value>
     </Setting>
     <Setting Name="searchProjectPathAlso" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
