--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./UnityLauncherPro.ZIP
-          asset_name: UnityLauncherPro.ZIP
+          asset_path: ./UnityLauncherPro.zip
+          asset_name: UnityLauncherPro.zip
           asset_content_type: application/zip
 
