--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           # cancel early, if not build commit
           $strVal ='${{ github.event.commits[0].message }}'
-          if($strVal -clike '*#TEST*') 
+          if($strVal -clike '*#GITBUILD*') 
           {
                 Write-Host 'True'
           } else {
