--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Get current date and time
         id: datetime
-        run: echo "CURRENT_DATETIME=$(date +'%d/%m/%Y %H:%M')" >> $GITHUB_ENV
+        run: echo "::set-output name=current_datetime::$(date +'%d/%m/%Y %H:%M')"
         
       - name: Create Release
         id: create_release
@@ -57,7 +57,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{github.run_number}}
-          release_name: ${{ env.CURRENT_DATETIME }} (${{ github.run_number }})
+          release_name: ${{ steps.datetime.outputs.current_datetime }} (${{ github.run_number }})
           body: |
             Automated Release by GitHub Action CI
           draft: false
