Add PostBuild action to restore Version.cs as empty string (so that it doesnt pollute version control with current build time stamp). #GITBUILD test
merged code from @SixParQuatre:
- Add option in settings/general to use alpha release note sites and use it in Tools.OpenReleaseNotes. As 6000 version changelog don't appear on the alpha site always use GetUnityReleaseNotes in that case.
- When using the alpha sites, we use it in comparison mode with the closest previous installed version. if none is found, use the same version as queried
- Added an extra parameter in Tools.FindNearestVersion to find the nearest below rather than above. Default value is false to maintain existing behaviour in existing calls.

--- a/UnityLauncherPro/UnityLauncherPro.csproj
+++ b/UnityLauncherPro/UnityLauncherPro.csproj
@@ -190,7 +190,13 @@
     <Resource Include="Images\icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+      <!-- PowerShell command to feed current timestamp into version.cs (it is displayed in the app -->
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
     <Exec Command="powershell -NoProfile -ExecutionPolicy Bypass -Command &quot;$pattern = 'public static string Stamp = \&quot;.*?\&quot;;'; $date = Get-Date -Format 'dd-MM-yyyy HH:mm:ss'; $replacement = 'public static string Stamp = \&quot;' + $date + '\&quot;;'; $path = '$(ProjectDir)Version.cs'; $content = Get-Content $path -Raw; $newContent = $content -replace $pattern, $replacement; [System.IO.File]::WriteAllText($path, $newContent, [System.Text.Encoding]::UTF8)&quot;" />
   </Target>
+      <!-- PowerShell command to restore the Stamp string to its initial state -->
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="powershell -NoProfile -ExecutionPolicy Bypass -Command &quot;$pattern = 'public static string Stamp = \&quot;.*?\&quot;;'; $replacement = 'public static string Stamp = \&quot;\&quot;;'; $path = '$(ProjectDir)Version.cs'; $content = Get-Content $path -Raw; $newContent = $content -replace $pattern, $replacement; [System.IO.File]::WriteAllText($path, $newContent, [System.Text.Encoding]::UTF8)&quot;" />
+</Target>
+
 </Project>
