add default unity hub editors installation folder, fixes #112

--- a/UnityLauncherPro/Properties/Settings.settings
+++ b/UnityLauncherPro/Properties/Settings.settings
@@ -110,6 +110,7 @@
     <Setting Name="rootFolders" Type="System.Collections.Specialized.StringCollection" Scope="User">
       <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
+  &lt;string&gt;C:\Program Files\Unity\Hub\Editor\&lt;/string&gt;
   &lt;string&gt;C:\Program Files\&lt;/string&gt;
 &lt;/ArrayOfString&gt;</Value>
     </Setting>
