add disable unity hub from launching on Editor start #95

--- a/UnityLauncherPro/Properties/Settings.settings
+++ b/UnityLauncherPro/Properties/Settings.settings
@@ -151,5 +151,8 @@
     <Setting Name="useUnofficialReleaseList" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="disableUnityHubLaunch" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
